# ampru

./: 99-arduino-udev.rules  LICENSE  README.md  generate_arduino_msgs.sh
ampru_base/: CMakeLists.txt  package.xml
ampru_base/firmware/: CMakeLists.txt  SerialHDLC.cpp  SerialHDLC.h  dc_motor_test_2.ino  wheel_base.cpp
ampru_base/include/ampru_base/: ampru_hardware.h  message.h  serial_port.h
ampru_base/launch/: base.launch
ampru_base/src/: ampru_base.cpp  ampru_hardware.cpp  message.cpp  serial_port.cpp
ampru_bringup/: CMakeLists.txt  package.xml
ampru_common/: CMakeLists.txt  package.xml
ampru_control/: CMakeLists.txt  package.xml
ampru_control/config/: control.yaml  localization.yaml  twist_mux.yaml
ampru_control/launch/: control.launch  teleop-joy.launch  teleop-keyboard.launch
ampru_description/: CMakeLists.txt  package.xml
ampru_description/launch/: description.launch
ampru_description/urdf/: ampru.urdf.xacro  wheel.urdf.xacro
ampru_desktop/: CMakeLists.txt  package.xml
ampru_gazebo/: CMakeLists.txt  package.xml
ampru_gazebo/launch/: ampru_empty_world.launch  ampru_range_sensor_test.launch  ampru_willow_garage.launch  range_sensor_test.launch  spawn_ampru.launch
ampru_gazebo/worlds/: range_sensor_test.world
ampru_hardware/: CMakeLists.txt  package.xml
ampru_msgs/: CMakeLists.txt  package.xml
ampru_msgs/msg/: WheelControl.msg  ampru_wheel_control.msg
ampru_navigation/: CMakeLists.txt  package.xml
ampru_navigation/config/: base_local_planner.yaml  costmap_common.yaml  costmap_global.yaml  costmap_local.yaml
ampru_navigation/launch/: gmapping.launch  move_base.launch
ampru_robot/: CMakeLists.txt  package.xml
ampru_simulation/: CMakeLists.txt  package.xml
ampru_sonar_scanner/: CMakeLists.txt  package.xml
ampru_sonar_scanner/launch/: scan.launch
ampru_sonar_scanner/src/: ampru_sonar_scanner.cpp
ampru_viz/: CMakeLists.txt  package.xml
ampru_viz/launch/: view_model.launch  view_robot.launch
ampru_viz/rviz/: model.rviz  robot.rviz
