<?xml version="1.0"?>
<package>
  <name>ampru_common</name>
  <version>0.0.0</version>
  <description>The ampru_common package</description>

  <maintainer email="randy.deborggraeve@gmail.com">Randy Deborggraeve</maintainer>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/ampru_common</url>
  <url type="repository">https://github.com/DeborggraeveR/ampru</url>
  <url type="bugtracker">https://github.com/DeborggraeveR/ampru/issues</url>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>ampru_description</run_depend>
  <run_depend>ampru_control</run_depend>

  <export>
    <metapackage/>
  </export>
</package>
