<?xml version="1.0"?>
<package>
  <name>ampru_desktop</name>
  <version>0.0.0</version>
  <description>The ampru_desktop package</description>

  <maintainer email="randy.deborggraeve@gmail.com">Randy Deborggraeve</maintainer>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/ampru_desktop</url>
  <url type="repository">https://github.com/DeborggraeveR/ampru</url>
  <url type="bugtracker">https://github.com/DeborggraeveR/ampru/issues</url>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>ampru_viz</run_depend>

  <export>
    <metapackage/>
  </export>
</package>
