<?xml version="1.0"?>
<package>
  <name>ampru_msgs</name>
  <version>0.0.0</version>
  <description>The ampru_msgs package</description>

  <maintainer email="randy.deborggraeve@gmail.com">Randy Deborggraeve</maintainer>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/ampru_msgs</url>
  <url type="repository">https://github.com/DeborggraeveR/ampru</url>
  <url type="bugtracker">https://github.com/DeborggraeveR/ampru/issues</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>

  <export/>
</package>
