<?xml version="1.0"?>
<package>
  <name>ampru_navigation</name>
  <version>0.0.0</version>
  <description>The ampru_navigation package</description>

  <maintainer email="randy.deborggraeve@gmail.com">Randy Deborggraeve</maintainer>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/ampru_description</url>
  <url type="repository">https://github.com/DeborggraeveR/ampru</url>
  <url type="bugtracker">https://github.com/DeborggraeveR/ampru/issues</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <run_depend>gmapping</run_depend>
  <run_depend>map_server</run_depend>
  
  <export/>
</package>
