<?xml version="1.0"?>
<package>
  <name>ampru_sonar_scanner</name>
  <version>0.0.0</version>
  <description>The ampru_sonar_scanner package</description>

  <maintainer email="randy.deborggraeve@gmail.com">Randy Deborggraeve</maintainer>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/ampru_base</url>
  <url type="repository">https://github.com/DeborggraeveR/ampru</url>
  <url type="bugtracker">https://github.com/DeborggraeveR/ampru/issues</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>tf</run_depend>
  
  <export/>
</package>
