<?xml version="1.0"?>
<package>
  <name>ampru_viz</name>
  <version>0.0.0</version>
  <description>The ampru_viz package</description>

  <maintainer email="randy.deborggraeve@gmail.com">Randy Deborggraeve</maintainer>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/ampru_viz</url>
  <url type="repository">https://github.com/DeborggraeveR/ampru</url>
  <url type="bugtracker">https://github.com/DeborggraeveR/ampru/issues</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>

  <export/>
</package>
